<resources>
    <string name="app_name">Explore Tartu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="google_login">Google login</string>
    <string name="full_name">Full name</string>
    <string name="log_out">Log out</string>
    <string name="register">Sign up here</string>
    <string name="todays_weather">How do You feel about todays weather?</string>
    <string name="go_outside">I want to do something outside</string>
    <string name="go_inside">I want to do something inside</string>
    <string name="surprise">Surprise me!</string>
    <string name="welcome">Welcome!
        <br /> Start Your adventure!</string>
    <string name="start">Start</string>
    <string name="arrived">I arrived</string>
    <string name="alone_question">Lets see how extroverted or introverted You are feeling today </string>
    <string name="alone">I am alone today</string>
    <string name="group">I am in a group today. It’s me and _____ other friends</string>
    <string name="group_size">How many people are there in Your group?</string>
    <string name="continue_text">Continue</string>
    <string name="budget">Do You have
any budget?</string>
    <string name="free">Yes! I am saving at the moment. So I want my activity to be free</string>
    <string name="exactAmount">Yes! I know exactly how much I want to spend. From: ___ To: ___</string>
    <string name="noBudget">No! Free cheese is only found in the mousetrap.</string>
    <string name="budget_size">What is Your budget size per person?</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="options">There are Your options:</string>
    <string name="dont_like">I don’t like neither of them</string>
    <string name="visit">You are going to %1$s </string>

    <string name="activity_name">Activity name</string>
    <string name="task_location_coordinates">Task location coordinates</string>
    <string name="indoor_or_outdoor">Is it indoor or outdoor activity?</string>
    <string name="price_question">How much per person does it costs?</string>
    <string name="minimum">Minimum</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="latitude">Latitude</string>
    <string name="maximum">Maximum</string>
    <string name="longitude">Longitude</string>
    <string name="how_many_people">How many people can participate?</string>
    <string name="add_activity">Add activity</string>
    <string name="home">Home</string>
    <string name="congratulations">Congratulations, You completed Your task!</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go back</string>

    <!-- Error messages -->
    <string name="max_smaller_min">Max budget value smaller than minimum!</string>
    <string name="min_error">Please fill minimum sum</string>
    <string name="max_error">Please fill maximum sum</string>
    <string name="too_big_group">Unfortunately group can\'t be bigger than 10</string>
    <string name="empty_group">Please enter group size</string>
    <string name="too_big_sum">Sorry, sum too big</string>
    <string name="history">History</string>
    <string name="empty_activity_name">Please add activity name</string>
    <string name="empty_latitude">Please add latitude</string>
    <string name="empty_longitude">Please add longitude</string>
    <string name="empty_price">Please add price</string>
    <string name="empty_min_person">Please add minimum number of people</string>
    <string name="empty_max_person">Please add maximum number of people</string>
    <string name="select_indoor_or">Please select indoor or outdoor</string>
    <string name="no_activities">Sorry we don\'t have activities that match Your description.</string>
    <string name="empty_name">Please add Your name</string>
    <string name="incorrect_email">Please check Your email</string>
    <string name="short_password">Password too short</string>
    <string name="fill_email">Please fill Your email</string>
    <string name="fill_password">Please fill Your password</string>


</resources>