<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addTask.AddTaskFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline33"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/task_location_coordinates"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/indoor_or_outdoor"
        app:layout_constraintBottom_toTopOf="@+id/indoor_or_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline35"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/price_question"
        app:layout_constraintBottom_toTopOf="@+id/price_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline36"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:text="@string/how_many_people"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline37"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1462dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1462dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1462dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/activity_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/text_dark"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="@dimen/text"
        app:backgroundTint="@color/text_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/latitude"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/latitude_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/text_dark"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text"
            app:backgroundTint="@color/text_dark" />

        <EditText
            android:id="@+id/longitude_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="@color/text_dark"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text"
            app:backgroundTint="@color/text_dark" />
    </LinearLayout>

    <EditText
        android:id="@+id/price_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/text_dark"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="@dimen/text"
        app:backgroundTint="@color/text_dark"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minimum"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maximum"
            android:textAlignment="viewStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <EditText
            android:id="@+id/min_person_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:textColor="@color/text_dark"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text"
            app:backgroundTint="@color/text_dark" />

        <EditText
            android:id="@+id/max_person_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:textColor="@color/text_dark"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text"
            app:backgroundTint="@color/text_dark" />
    </LinearLayout>

    <Button
        android:id="@+id/add_activity_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_vertical"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:text="@string/add_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <RadioGroup
        android:id="@+id/indoor_or_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_horisontal"
        android:layout_marginTop="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_horisontal"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <RadioButton
            android:id="@+id/indoor_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/indoor" />

        <RadioButton
            android:id="@+id/outdoor_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outdoor" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>